[metadata]
name = pandas_style_guide
version = 0.0.1
description = Linter for contributing to pandas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/pandas-style-guide
author = Marco Gorelli
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
py_modules = pandas_style_guide
install_requires =
    flake8>=3.8
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
flake8.extension =
    PSG=pandas_style_guide.__main__:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
