[metadata]
name = pandas_dev_flaker
version = 0.5.0
description = Linter for contributing to pandas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pandas-dev/pandas-dev-flaker
author = PyData Development Team
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
py_modules = pandas_dev_flaker
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pandas-dev-flaker = pandas_dev_flaker.main
flake8.extension =
    PDF=pandas_dev_flaker.__main__:run

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
